feat: #3 add retrieve dataset endpoint
